--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^11.0.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -30,10 +31,10 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
+    "jsdom": "^22.0.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0",
-    "vitest": "^0.28.4",
-    "jsdom": "^22.0.0"
+    "vitest": "^0.28.4"
   }
 }
