--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "firebase": "^11.0.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-device-detect": "^2.2.3",
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@testing-library/react": "^13.4.0",
