--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "360degrees",
+  "homepage": "/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -18,6 +19,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router": "^7.0.2",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
