--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.0.1",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-router": "^7.0.2",
     "styled-components": "^6.1.13"
